--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@
   -webkit-user-drag: none;
   -webkit-touch-callout: none;
   -ms-content-zooming: none;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
   padding: 0;
@@ -28,7 +29,10 @@ html, body {
   color: #fff;
 }
 
-a, a:hover, a:active, a:visited {
+a,
+a:hover,
+a:active,
+a:visited {
   text-decoration: none;
   color: inherit;
 }
@@ -79,8 +83,8 @@ body.multiple-scenes.mobile #titleBar {
   height: 100%;
   line-height: 30px;
   padding: 5px;
-  background-color: rgb(58,68,84);
-  background-color: rgba(58,68,84,0.8);
+  background-color: rgb(58, 68, 84);
+  background-color: rgba(58, 68, 84, 0.8);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -103,8 +107,8 @@ body.multiple-scenes.mobile #titleBar {
   width: 40px;
   height: 40px;
   padding: 5px;
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(103, 115, 131);
+  background-color: rgba(103, 115, 131, 0.8);
 }
 
 .mobile #fullscreenToggle {
@@ -153,8 +157,8 @@ body.fullscreen-enabled #fullscreenToggle {
   width: 40px;
   height: 40px;
   padding: 5px;
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(103, 115, 131);
+  background-color: rgba(103, 115, 131, 0.8);
 }
 
 .mobile #autorotateToggle {
@@ -207,8 +211,8 @@ body.fullscreen-enabled.mobile #autorotateToggle {
   width: 40px;
   height: 40px;
   padding: 5px;
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(103, 115, 131);
+  background-color: rgba(103, 115, 131, 0.8);
 }
 
 .mobile #sceneListToggle {
@@ -273,8 +277,8 @@ body.fullscreen-enabled.mobile #autorotateToggle {
 
 #sceneList .scenes {
   width: 100%;
-  background-color: rgb(58,68,84);
-  background-color: rgba(58,68,84,0.8);
+  background-color: rgb(58, 68, 84);
+  background-color: rgba(58, 68, 84, 0.8);
 }
 
 .mobile #sceneList {
@@ -320,17 +324,18 @@ body.fullscreen-enabled.mobile #autorotateToggle {
 }
 
 .no-touch #sceneList .scene:hover {
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(103, 115, 131);
+  background-color: rgba(103, 115, 131, 0.8);
 }
 
 #sceneList .scene.current {
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(103, 115, 131);
+  background-color: rgba(103, 115, 131, 0.8);
 }
 
 /* Hide scene list when only a single scene exists */
-body.single-scene #sceneList, body.single-scene #sceneListToggle {
+body.single-scene #sceneList,
+body.single-scene #sceneListToggle {
   display: none;
 }
 
@@ -376,8 +381,8 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
 
   border-radius: 5px;
 
-  background-color: rgb(58,68,84);
-  background-color: rgba(58,68,84,0.8);
+  background-color: rgb(58, 68, 84);
+  background-color: rgba(58, 68, 84, 0.8);
 
   color: #fff;
 
@@ -393,14 +398,10 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   -webkit-transform: translateX(-8px);
   transform: translateX(-8px);
 
-  -webkit-transition: -ms-transform 0.3s,
-                      -webkit-transform 0.3s,
-                      transform 0.3s,
-                      opacity 0.3s;
-  transition: -ms-transform 0.3s,
-              -webkit-transform 0.3s,
-              transform 0.3s,
-              opacity 0.3s;
+  -webkit-transition: -ms-transform 0.3s, -webkit-transform 0.3s, transform 0.3s,
+    opacity 0.3s;
+  transition: -ms-transform 0.3s, -webkit-transform 0.3s, transform 0.3s,
+    opacity 0.3s;
 }
 
 .mobile .link-hotspot {
@@ -453,12 +454,11 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   width: 40px;
   height: 40px;
   border-radius: 20px;
-  background-color: rgb(103,115,131);
+  background-color: rgb(103, 115, 131);
   cursor: pointer;
   -webkit-transition: width 0.3s ease-in-out 0.5s,
-                      border-radius 0.3s ease-in-out 0.5s;
-  transition: width 0.3s ease-in-out 0.5s,
-              border-radius 0.3s ease-in-out 0.5s;
+    border-radius 0.3s ease-in-out 0.5s;
+  transition: width 0.3s ease-in-out 0.5s, border-radius 0.3s ease-in-out 0.5s;
 }
 
 .mobile .info-hotspot .info-hotspot-header {
@@ -470,10 +470,8 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
 .desktop.no-touch .info-hotspot .info-hotspot-header:hover {
   width: 260px;
   border-radius: 5px;
-  -webkit-transition: width 0.3s ease-in-out,
-                      border-radius 0.3s ease-in-out;
-  transition: width 0.3s ease-in-out,
-              border-radius 0.3s ease-in-out;
+  -webkit-transition: width 0.3s ease-in-out, border-radius 0.3s ease-in-out;
+  transition: width 0.3s ease-in-out, border-radius 0.3s ease-in-out;
 }
 
 .desktop .info-hotspot.visible .info-hotspot-header,
@@ -483,10 +481,8 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-  -webkit-transition: width 0.3s ease-in-out,
-                      border-radius 0.3s ease-in-out;
-  transition: width 0.3s ease-in-out,
-              border-radius 0.3s ease-in-out;
+  -webkit-transition: width 0.3s ease-in-out, border-radius 0.3s ease-in-out;
+  transition: width 0.3s ease-in-out, border-radius 0.3s ease-in-out;
 }
 
 .info-hotspot .info-hotspot-icon-wrapper {
@@ -513,24 +509,23 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   height: 40px;
   padding: 0;
   overflow: hidden;
-  -webkit-transition: width 0s 0.4s,
-                      padding 0s 0.4s;
-  transition: width 0s 0.4s,
-              padding 0s 0.4s;
+  -webkit-transition: width 0s 0.4s, padding 0s 0.4s;
+  transition: width 0s 0.4s, padding 0s 0.4s;
 }
 
 .desktop .info-hotspot.visible .info-hotspot-title-wrapper,
-.desktop.no-touch .info-hotspot .info-hotspot-header:hover .info-hotspot-title-wrapper {
+.desktop.no-touch
+  .info-hotspot
+  .info-hotspot-header:hover
+  .info-hotspot-title-wrapper {
   width: 220px;
   padding: 0 5px;
-  -webkit-transition: width 0s 0.4s,
-                      padding 0s 0.4s;
-  transition: width 0s 0.4s,
-              padding 0s 0.4s;
+  -webkit-transition: width 0s 0.4s, padding 0s 0.4s;
+  transition: width 0s 0.4s, padding 0s 0.4s;
 }
 
 .info-hotspot .info-hotspot-title-wrapper:before {
-  content: '';
+  content: "";
   display: inline-block;
   vertical-align: middle;
   height: 100%;
@@ -553,7 +548,7 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   height: 40px;
   width: 40px;
   border-top-right-radius: 5px;
-  background-color: rgb(78,88,104);
+  background-color: rgb(78, 88, 104);
   visibility: hidden;
   -ms-transform: perspective(200px) rotateY(90deg);
   -webkit-transform: perspective(200px) rotateY(90deg);
@@ -561,14 +556,10 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   -ms-transform-origin: 0 50% 0;
   -webkit-transform-origin: 0 50% 0;
   transform-origin: 0 50% 0;
-  -webkit-transition: -ms-transform 0.3s 0.3s,
-                      -webkit-transform 0.3s 0.3s,
-                      transform 0.3s 0.3s,
-                      visibility 0s 0.6s;
-  transition: -ms-transform 0.3s 0.3s,
-              -webkit-transform 0.3s 0.3s,
-              transform 0.3s 0.3s,
-              visibility 0s 0.6s;
+  -webkit-transition: -ms-transform 0.3s 0.3s, -webkit-transform 0.3s 0.3s,
+    transform 0.3s 0.3s, visibility 0s 0.6s;
+  transition: -ms-transform 0.3s 0.3s, -webkit-transform 0.3s 0.3s,
+    transform 0.3s 0.3s, visibility 0s 0.6s;
 }
 
 .desktop .info-hotspot.visible .info-hotspot-close-wrapper {
@@ -576,14 +567,10 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   -ms-transform: perspective(200px) rotateY(0deg);
   -webkit-transform: perspective(200px) rotateY(0deg);
   transform: perspective(200px) rotateY(0deg);
-  -webkit-transition: -ms-transform 0.3s,
-                      -webkit-transform 0.3s,
-                      transform 0.3s,
-                      visibility 0s 0s;
-  transition: -ms-transform 0.3s,
-              -webkit-transform 0.3s,
-              transform 0.3s,
-              visibility 0s 0s;
+  -webkit-transition: -ms-transform 0.3s, -webkit-transform 0.3s, transform 0.3s,
+    visibility 0s 0s;
+  transition: -ms-transform 0.3s, -webkit-transform 0.3s, transform 0.3s,
+    visibility 0s 0s;
 }
 
 .info-hotspot .info-hotspot-close-icon {
@@ -600,7 +587,7 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   top: 40px;
   left: 0;
   padding: 10px;
-  background-color: rgb(58,68,84);
+  background-color: rgb(58, 68, 84);
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
   overflow-y: auto;
@@ -612,14 +599,10 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   -ms-transform-origin: 50% 0 0;
   -webkit-transform-origin: 50% 0 0;
   transform-origin: 50% 0 0;
-  -webkit-transition: -ms-transform 0.3s,
-                      -webkit-transform 0.3s,
-                      transform 0.3s,
-                      visibility 0s 0.3s;
-  transition: -ms-transform 0.3s,
-              -webkit-transform 0.3s,
-              transform 0.3s,
-              visibility 0s 0.3s;
+  -webkit-transition: -ms-transform 0.3s, -webkit-transform 0.3s, transform 0.3s,
+    visibility 0s 0.3s;
+  transition: -ms-transform 0.3s, -webkit-transform 0.3s, transform 0.3s,
+    visibility 0s 0.3s;
 
   -moz-user-select: text;
   -webkit-user-select: text;
@@ -632,14 +615,10 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   -ms-transform: perspective(200px) rotateX(0deg);
   -webkit-transform: perspective(200px) rotateX(0deg);
   transform: perspective(200px) rotateX(0deg);
-  -webkit-transition: -ms-transform 0.3s 0.3s,
-                      -webkit-transform 0.3s 0.3s,
-                      transform 0.3s 0.3s,
-                      visibility 0s 0s;
-  transition: -ms-transform 0.3s 0.3s,
-              -webkit-transform 0.3s 0.3s,
-              transform 0.3s 0.3s,
-              visibility 0s 0s;
+  -webkit-transition: -ms-transform 0.3s 0.3s, -webkit-transform 0.3s 0.3s,
+    transform 0.3s 0.3s, visibility 0s 0s;
+  transition: -ms-transform 0.3s 0.3s, -webkit-transform 0.3s 0.3s,
+    transform 0.3s 0.3s, visibility 0s 0s;
 }
 
 /* Info hotspot modal */
@@ -656,23 +635,19 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   height: 100%;
   overflow: hidden;
   z-index: 11000 !important;
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0, 0, 0, 0.5);
   line-height: 1.2em;
   opacity: 0;
   visibility: hidden;
-  -webkit-transition: opacity 0.2s ease-in-out 0.5s,
-                      visibility 0s 0.7s;
-  transition: opacity 0.2s ease-in-out 0.5s,
-              visibility 0s 0.7s;
+  -webkit-transition: opacity 0.2s ease-in-out 0.5s, visibility 0s 0.7s;
+  transition: opacity 0.2s ease-in-out 0.5s, visibility 0s 0.7s;
 }
 
 .info-hotspot-modal.visible {
   opacity: 1;
   visibility: visible;
-  -webkit-transition: opacity 0.2s ease-in-out,
-                      visibility 0s 0s;
-  transition: opacity 0.2s ease-in-out,
-              visibility 0s 0s;
+  -webkit-transition: opacity 0.2s ease-in-out, visibility 0s 0s;
+  transition: opacity 0.2s ease-in-out, visibility 0s 0s;
 }
 
 .info-hotspot-modal .info-hotspot-header {
@@ -682,8 +657,8 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   right: 10px;
   width: auto;
   height: 50px;
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(103, 115, 131);
+  background-color: rgba(103, 115, 131, 0.8);
   opacity: 0;
   -webkit-transition: opacity 0.3s ease-in-out 0.2s;
   transition: opacity 0.3s ease-in-out 0.2s;
@@ -717,7 +692,7 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
 }
 
 .info-hotspot-modal .info-hotspot-title-wrapper:before {
-  content: '';
+  content: "";
   display: inline-block;
   vertical-align: middle;
   height: 100%;
@@ -739,8 +714,8 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   right: 0;
   width: 50px;
   height: 50px;
-  background-color: rgb(78,88,104);
-  background-color: rgba(78,88,104,0.8);
+  background-color: rgb(78, 88, 104);
+  background-color: rgba(78, 88, 104, 0.8);
   cursor: pointer;
 }
 
@@ -757,8 +732,8 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   left: 10px;
   right: 10px;
   padding: 10px;
-  background-color: rgb(58,68,84);
-  background-color: rgba(58,68,84,0.8);
+  background-color: rgb(58, 68, 84);
+  background-color: rgba(58, 68, 84, 0.8);
   overflow-y: auto;
   opacity: 0;
   -webkit-transition: opacity 0.3s ease-in-out;
@@ -786,8 +761,8 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
   width: 40px;
   height: 40px;
   padding: 5px;
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(103, 115, 131);
+  background-color: rgba(103, 115, 131, 0.8);
 }
 
 body.view-control-buttons .viewControlButton {
@@ -827,4 +802,208 @@ body.view-control-buttons .viewControlButton {
 }
 .viewControlButton-6 {
   margin-left: 105px;
+}
+
+info {
+  width: 66px;
+  height: 66px;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+#info .icon_wrapper {
+  width: 100%;
+  height: 100%;
+  padding: 4px;
+  border-radius: 50%;
+  border: 1px solid rgba(255, 255, 255, 0);
+  opacity: 0.8;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+#info .icon {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 4px solid #fff;
+  transition: all 0.2s ease-in-out;
+}
+
+#info .icon_wrapper:hover {
+  border: 6px solid rgba(255, 255, 255, 1);
+}
+
+#info .icon_wrapper:hover .icon {
+  border: 4px solid rgba(255, 255, 255, 0.5);
+}
+
+#info .inner_icon {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: all 0.2s ease-in-out;
+}
+
+#info .closeIcon {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#info .icon1 {
+  width: 4px;
+  height: 26px;
+  position: absolute;
+  top: 20px;
+  left: 31px;
+  border-radius: 10px;
+  background-color: #fff;
+}
+
+#info .icon2 {
+  width: 26px;
+  height: 4px;
+  position: absolute;
+  top: 31px;
+  left: 20px;
+  border-radius: 10px;
+  background-color: #fff;
+}
+
+#info .tip,
+#info .content {
+  position: absolute;
+  left: 100px;
+  top: 10px;
+  width: 280px;
+
+  background-color: white;
+  color: black;
+  padding: 1em;
+  border-radius: 5px;
+}
+
+#info .content {
+  padding: 0;
+}
+
+#info .content .content-form {
+  padding: 0 0.5em;
+  margin-top: 0.5em;
+}
+
+#info .tip {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s;
+  -webkit-transition: opacity 0.2s;
+  -webkit-font-smoothing: antialiased;
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
+  -webkit-transform-origin: -2em 50%;
+  transform-origin: -2em 50%;
+  -webkit-transform: translate3d(0, 0, 0) rotate3d(1, 1, 1, 30deg);
+  transform: translate3d(0, 0, 0) rotate3d(1, 1, 1, 30deg);
+}
+
+#info .tip::before,
+#info .tip::after {
+  content: "";
+  position: absolute;
+  right: 99%; /* fix visible gap on Firefox */
+}
+
+#info .tip::before {
+  height: 100%;
+  width: 3em;
+}
+
+#info .tip::after {
+  width: 1.8em;
+  height: 1.8em;
+  top: 50%;
+  margin: -0.9em 0 0;
+  background: url(../img/tooltip.svg) no-repeat center center;
+  background-size: 100%;
+}
+
+#info:hover .tip {
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0) rotate3d(0, 0, 0, 0);
+  transform: translate3d(0, 0, 0) rotate3d(0, 0, 0, 0);
+  pointer-events: auto;
+}
+
+#info.expanded {
+  z-index: 2;
+}
+
+#info .tip,
+#info .content,
+#info.expanded:hover .tip {
+  opacity: 0;
+  pointer-events: none;
+}
+
+#info:hover .tip,
+#info.expanded .content {
+  opacity: 1;
+  pointer-events: all;
+}
+
+#info .content {
+  transform: scaleY(0);
+  -webkit-transform: scaleY(0);
+  transition: transform 0.2s, opacity 0.2s;
+  -webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
+  transform-origin: top center;
+  -webkit-transform-origin: top center;
+}
+
+#info.expanded .content {
+  transform: scaleY(1);
+  -webkit-transform: scaleY(1);
+}
+
+#info .content .content-form > * {
+  margin-bottom: 1em;
+}
+
+#info .content .image-wrapper {
+  padding: 2px;
+}
+
+#info .content img {
+  width: 100%;
+}
+
+#info .content > *:last-child {
+  margin-bottom: 0;
+}
+
+#info .close {
+  cursor: pointer;
+}
+
+#info input {
+  width: 100%;
+  height: 30px;
+  padding: 8px;
+  background-color: #f5f5f5;
+  border: 1px solid #e5e5e5;
+}
+
+#info .button_wrapper {
+  width: 100%;
+  background-color: #f5f5f5;
+}
+
+#info button {
+  font-size: 0.8em;
+  padding: 1em;
+  background-color: #25aae1;
+  border: 2px solid #25aae1;
+  color: #fff;
 }
