--- a/style.css
+++ b/style.css
@@ -1007,3 +1007,66 @@ info {
   border: 2px solid #25aae1;
   color: #fff;
 }
+
+/*********************
+MODAL
+**********************/
+
+.modal {
+  display: hidden; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100vh; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  backdrop-filter: blur(6px);
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 30px auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  border-radius: 10px;
+  border: 2px solid #252969;
+}
+
+.modal-text {
+  margin-left: 20px;
+  color: #4f4f4f;
+}
+
+.welcomeSVG {
+  width: 75px;
+  text-align: center;
+}
+
+h1 {
+  margin-top: 10px;
+  color: #4f4f4f;
+}
+
+button {
+  background-image: none;
+  background-color: white;
+  color: #252969;
+  padding: 15px;
+  border: 2px solid #252969;
+  border-radius: 5px;
+}
+
+button:hover {
+  background: #252969;
+  color: white;
+}
+
+.svgHolder {
+  width: 100%;
+  text-align: center;
+}
