--- a/style.css
+++ b/style.css
@@ -1013,7 +1013,7 @@ MODAL
 **********************/
 
 .modal {
-  display: hidden; /* Hidden by default */
+  display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
