--- a/style.css
+++ b/style.css
@@ -1026,6 +1026,20 @@ MODAL
   backdrop-filter: blur(6px);
 }
 
+.modalOpen {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100vh; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  backdrop-filter: blur(6px);
+}
+
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
