--- a/style.css
+++ b/style.css
@@ -804,7 +804,7 @@ body.view-control-buttons .viewControlButton {
   margin-left: 105px;
 }
 
-info {
+.info {
   width: 66px;
   height: 66px;
   margin-left: -30px;
