--- a/style.css
+++ b/style.css
@@ -804,22 +804,11 @@ body.view-control-buttons .viewControlButton {
   margin-left: 105px;
 }
 
-.info {
+#info {
   width: 66px;
   height: 66px;
   margin-left: -30px;
   margin-top: -30px;
-}
-
-#info .icon_wrapper {
-  width: 100%;
-  height: 100%;
-  padding: 4px;
-  border-radius: 50%;
-  border: 1px solid rgba(255, 255, 255, 0);
-  opacity: 0.8;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
 }
 
 #info.expanded {
