--- a/style.css
+++ b/style.css
@@ -885,7 +885,8 @@ MODAL
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
   border-radius: 10px;
-  border: 2px solid #252969;
+  border: 2px solid red;
+  box-shadow: 10px 10px 15px 5px yellow;
 }
 
 .modal-text {
